# KNU_TERM_PROJECT

./: CMakeLists.txt  DATASET_Downloader.py  DATASET_conversion.py  OPENCV_Missile.py  OPENCV_Missile_PYTORCH.py  PYTORCH_modelconversion.py  PYTORCH_modeltraining.py  PYTORCH_modeltraining_YOLO.py  PYTORCH_testing.py  README.md  TENSORFLOW_freeze.py  TENSORFLOW_model_training.py  TENSORFLOW_modelconversion.py  TESTING.py  TESTING_VERSIONS.py  dataset_import.py  freeze.py  main.cpp  maintest.py  requirements.txt  tensorflow_model_training.py
datasetV1/dataset/test/military_vehicule/: BTR-82A.avif
datasetV3/dataset/train/military_vehicule/: ACV_23_Jan_2023.63c96fb5d13b5.avif  IYHFOSFIOM6VICNLRRHHXBG42A.avif  Unpainted-KIT-8X8-1-12-CROSSRC-BT8-Amphibious-Armored-Transport-Vehicles-2-speed-Wheeled-Military-RC.avif
models/datasetV1/: fingerprint.pb  saved_model.pb
models/datasetV1/variables/: variables.index
models/datasetV2/: fingerprint.pb  saved_model.pb
models/datasetV2/variables/: variables.index
